JavaHelp corregido. Informe 2 falla

--- a/ClienteTwitter/help/html/informes.html
+++ b/ClienteTwitter/help/html/informes.html
@@ -5,9 +5,11 @@
 <body>
 	<h1>Ventana informes</h1>
 	<p>Esta es la ayuda de la ventana informes.</p>
-	<p>En esta ventana se pueden generar 3 tipos de informes:
-	• Un informe en PDF con todos los tweets que hemos publicado entre dos fechas a elegir.
-	• Un informe en PDF con la lista de seguidores que tiene una cuenta y la lista de personas a las que se sigue.
-	• Un informe en PDF con los tweets de un usuario a elegir.</p>
+	<p>En esta ventana se pueden generar 3 tipos de informes:</p>
+	<ul>
+	  <li>Un informe en PDF con la lista de seguidores que tiene una cuenta y la lista de personas a las que se sigue.</li>
+	  <li>Un informe en PDF con todos los tweets que hemos publicado entre dos fechas a elegir.</li>
+	  <li>Un informe en PDF con los tweets de un usuario a elegir.</li>
+	</ul> 
 </body>
 </html>
