--- a/ClienteTwitter/help/html/login.html
+++ b/ClienteTwitter/help/html/login.html
@@ -7,15 +7,14 @@
 	<p>La ventana tiene un botón para iniciar sesión y abrir la ventana
 	<a href="principal.html">principal</a>, que también tiene
 	su propia página de ayuda.</p>
-	<p>
-	Inicio en la aplicación
-	• La aplicación comenzará solicitando un usuario y contraseña con el que se
+	<p><strong>Inicio en la aplicación</strong></p>
+	<ul>
+	  <li>La aplicación comienza solicitando un usuario y contraseña con el que se
 	conectará a Twitter. Hasta que el usuario no se conecte correctamente, no
-	podrá continuar en la aplicación.
-	• Se permitirá al usuario guardar el usuario y contraseña para usos posteriores.
-	Estos datos se guardarán en disco con algún tipo de encriptación.
-	• Aunque haya una contraseña guardada, siempre se podrá iniciar sesión como
-	un usuario diferente cuando se desee.
-	</p>
+	podrá continuar en la aplicación</li>
+	  <li>Se permite al usuario guardar el usuario y contraseña para usos posteriores.</li>
+	  <li>Aunque haya una contraseña guardada, siempre se podrá iniciar sesión como
+	un usuario diferente cuando se desee.</li>
+	</ul>
 </body>
 </html>
