--- a/ClienteTwitter/help/html/principal.html
+++ b/ClienteTwitter/help/html/principal.html
@@ -8,33 +8,36 @@
 	<p>La ventana tiene un botón para abrir la ventana 
 	<a href="informes.html">informes</a>, que también tiene
 	su propia página de ayuda.</p>
-	<p>
-	Pantalla principal
-	• En la pantalla principal se podrán ver los últimos tweets que han publicado las 
-	personas a las que seguimos.
-	• Se podrá leer el texto completo de cada tweet.
-	• Se podrá retwittear un tweet de la lista.
-	• Si en un tweet aparece referenciado un usuario, tendremos la opción de seguir
-	a ese usuario.
-	• En la pantalla principal se mostrarán los 10 trending topics más populares en el
-	momento. Pulsando en uno de ellos hará el mismo efecto que si buscásemos
-	ese hashtag en el buscador (ver más adelante).
-	• La información de la pantalla principal se refrescará cada 10 segundos
-	automáticamente aunque también habrá un botón para refrescarla de manera
-	manual.
-
-	Publicar un nuevo tweet
-	• La aplicación debe permitir publicar un nuevo tweet (mensaje de 140 caracteres).
-
-	Seguidores y seguidos
-	• Se podrá ver una lista de los seguidores que tiene la cuenta.
-	• Se podrá ver una lista de las personas a las que se sigue desde una cuenta.
-
-	Búsquedas
-	• La aplicación permitirá la búsqueda de tweets que hablen sobr eun tema
-	determinado a través de hashtags.
-	• La aplicación permitirá buscar usuarios por su nombre, pudiendo ver que
-	tweets han publicado.
-	</p>
+	<p><strong>Pantalla principal</strong></p>
+	<ul>
+	  <li>En la pantalla principal se pueden ver los últimos tweets que han publicado las 
+	personas a las que seguimos.</li>
+	  <li>Se puede leer el texto completo de cada tweet.</li>
+	  <li>Se puede retwittear un tweet de la lista.</li>
+	  <li>Si en un tweet aparece referenciado un usuario, tendremos la opción de seguir
+	a ese usuario.</li>
+	  <li>En la pantalla principal se muestran los 10 trending topics más populares en el
+	momento. Pulsar en uno de ellos tendrá el mismo efecto que si buscásemos
+	ese hashtag en el buscador.</li>
+	  <li>La información de la pantalla principal se refresca cada 10 segundos
+	automáticamente aunque también hay un botón para refrescarla de manera
+	manual.</li>
+	</ul>
+	<p><strong>Publicar un nuevo tweet</strong></p>
+	<ul>
+	  <li>La aplicación permite publicar un nuevo tweet (mensaje de 140 caracteres).</li>
+	</ul>
+	<p><strong>Seguidores y seguidos</strong></p>
+	<ul>
+	  <li>Se puede ver una lista de los seguidores que tiene la cuenta.</li>
+	  <li>Se puede ver una lista de las personas a las que se sigue desde una cuenta.</li>
+	</ul>
+	<p><strong>Búsquedas</strong></p>
+	<ul>
+	  <li>La aplicación permite la búsqueda de tweets que hablen sobre un tema
+	determinado a través de hashtags.</li>
+	  <li>La aplicación permite buscar usuarios por su nombre, pudiendo ver qué
+	tweets han publicado.</li>
+	</ul>	
 </body>
 </html>
